# puma-coin-project

./: .firebaserc  .gitignore  PumaCoin.txt  README.md  contratos.txt  package-lock.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
client/: .env  .gitignore  Anchor.toml  package-lock.json  package.json
client/.firebase/: hosting.YnVpbGQ.cache
client/app/: .env  .firebaserc  .gitignore  package-lock.json  package.json  webpack.config.js
client/app/.firebase/: hosting.YnVpbGQ.cache
client/app/public/: index.html
client/app/src/: App.js  idl.json  index.js
client/programs/conectWallet/: Cargo.toml
client/programs/conectWallet/src/: lib.rs
client/src/: App.js  index.css  index.js
client/src/Reducers/: modal.js
client/src/Routes/: AppRouter.js
client/tests/: conectWallet.js
conectWallet/: package-lock.json
conectWallet/app/: package-lock.json  package.json
public/: index.html
server/: README.md  app.js  example.env  package-lock.json  package.json
server/controllers/: account.js  auth.js  payments.js  support.js  user.js  users.js
server/database/: config.js
server/helpers/: db-validators.js  generateJWT.js  googleVerify.js  payments.js
server/middlewares/: authorization.js  validate-JWT.js  validate-fields.js
server/models/: server.js  transactions.js  user.js
server/public/: templates.js
server/routes/: account.js  auth.js  passwordReset.js  payments.js  support.js  user.js  users.js
server/utils/: sendEmail.js  sendEmailToSupport.js  stripeWebHooksHandlers.js
(+138 files in other folders)
