[package]
name = "conectWallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "conect_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
spl-associated-token-account = "1.0.5"
spl-token = "3.3.0"
solana-program = "1.11.4"
borsh = "0.9.3"
